.provarCaches/00D410000011HE0EAM/objects/rstk__poagrlne__c.object
<CustomObject>
    <description>poagrlne__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poagrlne_agreeno__r.rstk__poagrhdr_agreeno__c + &apos; &apos; +  rstk__poagrlne_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__poagrlne_item__r.rstk__poitem_item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_agreeno__c</fullName>
        <inlineHelpText>This is the Agreement Number that is used internally, and may be different than the Vendor&apos;s Agreement Number.  It can be a system-generated number of can be set manually, requiring an alpha-character prefix.</inlineHelpText>
        <label>Agreement Number</label>
        <referenceTo>rstk__poagrhdr__c</referenceTo>
        <relationshipName>POAGRLNEs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_descr__c</fullName>
        <inlineHelpText>This is the Description of the PO Agreement</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Identifies the specific Division that is associated with this PO Agreement Line.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoagrlnes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Item Number for which the Agreement Line is for. Must have a valid PO Item Master record to be added to an agreement.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipName>POAGRLNEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_lne__c</fullName>
        <inlineHelpText>This is the Line Number assigned to a Purchase Agreement for the given Item.</inlineHelpText>
        <label>Agreement Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_ovrpriceind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checkbox is checked, the unit price on a PO Line tied to this Agreement is initialized to the Agreement Line Unit Price (rather than the price on the Item/Vendor Master).</inlineHelpText>
        <label>Override Item Vendor Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_poitemtype_pl__c</fullName>
        <inlineHelpText>This is the Item Type from the PO Item Master for the given item. Valid values are Purchased, Subcontract, Outside Operation, Indirect Material or Service.</inlineHelpText>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect Material</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Subcontract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_unitprice__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Agreement Unit Price for the given item in Home currency.</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poagrlne_unitpricevcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Agreement Unit Price for the given item in the Vendor&apos;s currency.</inlineHelpText>
        <label>Unit Price (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_PO_Agreement_Line</fullName>
        <columns>NAME</columns>
        <columns>rstk__poagrlne_div__c</columns>
        <columns>rstk__poagrlne_agreeno__c</columns>
        <columns>rstk__poagrlne_lne__c</columns>
        <columns>rstk__poagrlne_descr__c</columns>
        <columns>rstk__poagrlne_item__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Agreement Line</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POAGRLNE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Agreement Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>